Adaptação para nvim-lspconfig
No commit anterior eu removi o nvim-lspconfig, porém foi um erro, pois
ele que fornece as ferramentas adequadas para o cliente JDTLS do nvim.

Como não estou usando mais o plugin nvim-jdtls, mudei o nome do arquivo
para jdtls apenas.